--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.36
 generated_by: 'Module::Build version 0.3601'
-license: artistic
+license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -44,5 +44,5 @@ requires:
   Digest::SHA1: 0
   MIME::Base64: 0
 resources:
-  license: http://opensource.org/licenses/artistic-license.php
+  license: http://opensource.org/licenses/artistic-license-2.0.php
 version: 0.02
