--- a/META.yml
+++ b/META.yml
@@ -13,6 +13,7 @@ build_requires:
   Test::More: 0
 requires:
   Crypt::Rijndael: 0
+  DateTime: 0
   Digest::HMAC_SHA1: 0
   Digest::SHA1: 0
   MIME::Base64: 0
