Correct author/copyright section in `dist.ini`.
Apologies; an over-exuberant copy/paste to move things to `Dist::Zilla`,
and I neglected to dig deeper as it's been soooo long since anyone
looked at this code.

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,8 @@
 name             = Crypt-OpenToken
 author           = Graham TerMarsch <cpan@howlingfrog.com>
+author           = Shawn Devlin <shawn.devlin@socialtext.com>
 license          = Artistic_2_0
-copyright_holder = Graham TerMarsch
+copyright_holder = Socialtext
 
 [@Filter]
 -bundle = @Basic
