Use `@Author::GTERMARS` DZil Plugin Bundle.
Rather than listing all of the various bits+pieces that the active
maintainer is going to use for a release, just use his DZil Author
Bundle.

--- a/dist.ini
+++ b/dist.ini
@@ -4,43 +4,4 @@ author           = Shawn Devlin <shawn.devlin@socialtext.com>
 license          = Artistic_2_0
 copyright_holder = Socialtext
 
-[@Filter]
--bundle = @Basic
--remove = Readme
--remove = GatherDir
-
-[GatherDir]
-exclude_filename = dist.ini
-
-[ReadmeAnyFromPod / ReadmeGfmInRoot]
-[ReadmeAnyFromPod / ReadmeInDist]
-[Prereqs::FromCPANfile]
-
-[PodSyntaxTests]
-[PodCoverageTests]
-
-[MetaResources]
-bugtracker.web = https://github.com/bleargh45/Crypt-OpenToken/issues
-repository.web = https://github.com/bleargh45/Crypt-OpenToken
-repository.url = https://github.com/bleargh45/Crypt-OpenToken.git
-repository.type = git
-
-[MetaJSON]
-
-[RewriteVersion]
-
-[EnsureChangesHasContent]
-[NextRelease]
-
-; Commit updates to "Changes"
-[Git::Commit / Commit_Changes]
-commit_msg = Release v%V
-
-; Tag the release
-[Git::Tag]
-
-; Bump version, and commit that
-[BumpVersionAfterRelease]
-[Git::Commit / Commit_Next_Version]
-allow_dirty_match = ^lib/
-commit_msg = Version bump.
+[@Author::GTERMARS]
