--- a/META.yml
+++ b/META.yml
@@ -6,10 +6,9 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
+  Test2::Suite: '0.000118'
   Test::DiagINC: '0.002'
-  Test::Differences: '0'
-  Test::Exception: '0'
-  Test::More: '0.96'
+  Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
@@ -41,8 +40,8 @@ requires:
 resources:
   bugtracker: https://github.com/bleargh45/Crypt-OpenToken/issues
   repository: git://github.com/bleargh45/Crypt-OpenToken.git
-version: '0.09'
-x_generated_by_perl: v5.32.0
+version: '0.10'
+x_generated_by_perl: v5.32.1
 x_serialization_backend: 'YAML::Tiny version 1.73'
 x_spdx_expression: Artistic-2.0
 x_static_install: 1
