--- a/.github/workflows/perl-ci.yml
+++ b/.github/workflows/perl-ci.yml
@@ -78,7 +78,7 @@ jobs:
           - "--without-recommends"
 
     container:
-      image: perl:${{ matrix.perl-version }}
+      image: perldocker/perl-tester:${{ matrix.perl-version }}
 
     steps:
       - name: Download tarball artifact
